Fix katex overflow

--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -161,6 +161,7 @@ FLOW
 }
 .prose > :is(.katex-display) {
 	font-size: var(--size-0);
+  overflow-x: scroll;
 }
 
 /* Blockquote */
